PE_4_project/force-app/main/default/objects/Book_Issue__c/Book_Issue__c.object-meta.xml
<CustomObject>
    <description>Tracks book issue and return transactions for the Library Management System</description>
    <label>Book Issue</label>
    <nameField>
        <displayFormat>ISS-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>