PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>The book being issued</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Issues</relationshipLabel>
    <relationshipName>Book_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>