PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the book is due for return</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>