PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fine amount for late return (Rs. 5 per day)</description>
    <label>Fine Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>