PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>Date the book was issued</description>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>