PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <description>Current status of the book issue</description>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
                <default>true</default>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>