PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The member who is borrowing the book</description>
    <label>Member</label>
    <referenceTo>Library_Member__c</referenceTo>
    <relationshipLabel>Book Issues</relationshipLabel>
    <relationshipName>Book_Issues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>