PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks how many times a book issue has been renewed</description>
    <label>Renewal Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>