PE_4_project/force-app/main/default/objects/Book_Issue__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Date the book was returned</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>